# biocpp-io

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci_linux.yml  ci_misc.yml  clang-format.yaml
build_system/: bio-config-version.cmake  bio-config.cmake  biocpp_io-config-version.cmake  biocpp_io-config.cmake
doc/: main_page.md  overview.md  record_faq.md
doc/record_based/: 1_introduction.md  2_record_faq.md
include/bio/: exception.hpp  genomic_region.hpp  io.hpp  misc.hpp  platform.hpp  record.hpp  version.hpp
include/bio/ann_io/: header.hpp  misc.hpp  reader.hpp  reader_options.hpp  writer.hpp  writer_options.hpp
include/bio/detail/: add_enum_bitwise_operators.hpp  charconv.hpp  concept.hpp  in_file_iterator.hpp  index_tabix.hpp  magic_get.hpp  misc.hpp  out_file_iterator.hpp  range.hpp  reader_base.hpp  to_string.hpp  utility.hpp  views_eager_split.hpp  writer_base.hpp
include/bio/format/: all.hpp  bcf.hpp  bcf_input_handler.hpp  bcf_output_handler.hpp  fasta.hpp  fasta_input_handler.hpp  fastq.hpp  fastq_input_handler.hpp  format_input_handler.hpp  format_output_handler.hpp  sam.hpp  sam_input_handler.hpp  vcf.hpp  vcf_input_handler.hpp  vcf_output_handler.hpp
include/bio/io/: all.hpp  exception.hpp  genomic_region.hpp  misc.hpp  platform.hpp  record.hpp  version.hpp
include/bio/io/detail/: charconv.hpp  concept.hpp  in_file_iterator.hpp  index_tabix.hpp  magic_get.hpp  misc.hpp  out_file_iterator.hpp  range.hpp  reader_base.hpp  to_little_endian.hpp  to_string.hpp  tuple_record.hpp  utility.hpp  views_eager_split.hpp  writer_base.hpp
include/bio/io/format/: all.hpp  bcf.hpp  bcf_input_handler.hpp  bcf_output_handler.hpp  bed.hpp  bed_input_handler.hpp  bed_output_handler.hpp  fasta.hpp  fasta_input_handler.hpp  fasta_output_handler.hpp  fastq.hpp  fastq_input_handler.hpp  fastq_output_handler.hpp  format_input_handler.hpp  format_output_handler.hpp  vcf.hpp  vcf_input_handler.hpp  vcf_output_handler.hpp
include/bio/io/misc/: all.hpp  char_predicate.hpp  char_predicate_detail.hpp
include/bio/io/plain_io/: all.hpp  misc.hpp  reader.hpp  writer.hpp
include/bio/io/seq/: all.hpp  reader.hpp  reader_options.hpp  record.hpp  writer.hpp  writer_options.hpp
include/bio/io/seq_io/: all.hpp  misc.hpp  reader.hpp  reader_options.hpp  record.hpp
include/bio/io/stream/: all.hpp  compression.hpp  concept.hpp  transparent_istream.hpp  transparent_ostream.hpp
include/bio/io/txt/: all.hpp  misc.hpp  reader.hpp  writer.hpp
include/bio/io/var/: all.hpp  header.hpp  misc.hpp  reader.hpp  reader_options.hpp  record.hpp  (+2 more)
include/bio/map_io/: all.hpp  header.hpp  misc.hpp  reader.hpp  reader_options.hpp  sam_flag.hpp  sam_tag_dictionary.hpp
include/bio/plain_io/: all.hpp  misc.hpp  reader.hpp  writer.hpp
include/bio/seq_io/: all.hpp  misc.hpp  reader.hpp  reader_options.hpp
include/bio/stream/: compression.hpp  concept.hpp  transparent_istream.hpp  transparent_ostream.hpp
include/bio/var_io/: all.hpp  dynamic_type.hpp  header.hpp  misc.hpp  reader.hpp  reader_options.hpp  writer.hpp  writer_options.hpp
test/: biocpp_require_core_infrastructure.cmake
test/clang_format/: CMakeLists.txt
test/documentation/: CMakeLists.txt  DoxygenLayout.xml  DoxygenLayout.xml.module  README.md  bio-doxygen-module.cmake  bio-doxygen.cmake  bio_doxygen_cfg.in
test/documentation/doc_dev/: CMakeLists.txt
test/documentation/doc_usr/: CMakeLists.txt
test/format/: CMakeLists.txt
test/snippet/: CMakeLists.txt  record.cpp  snippet_tag.cpp
test/snippet/ann_io/: ann_io_reader.cpp  ann_io_reader.err
test/snippet/detail/: reader_base.cpp  tuple_record.cpp
test/snippet/misc/: char_predicate.cpp  char_predicate_is_char.cpp  char_predicate_is_in_interval.cpp  char_predicate_is_operator.cpp
test/snippet/seq/: seq_reader.cpp  seq_reader_options.cpp  seq_record.cpp  seq_writer.cpp
test/snippet/seq_io/: seq_io_reader.cpp  seq_io_reader.err  seq_io_reader_options.cpp  snippet_reader.cpp  snippet_reader.err  snippet_reader_options.cpp
test/snippet/stream/: transparent_istream.cpp
test/snippet/var/: var_reader.cpp  var_reader.out  var_reader_options.cpp  var_writer.cpp
test/snippet/var_io/: var_io_reader.cpp  var_io_reader.err  var_io_reader_options.cpp  var_io_reader_options.err  var_io_reader_options.out  var_io_writer.cpp
test/unit/: CMakeLists.txt  genomic_region_test.cpp  record_test.cpp
test/unit/ann_io/: CMakeLists.txt  ann_io_reader_test.cpp  ann_io_writer_test.cpp
test/unit/detail/: CMakeLists.txt  eager_split_test.cpp  index_tabix_test.cpp  is_shallow_v_test.cpp  tuple_record_test.cpp
test/unit/format/: 1000G_chr10_sample.vcf.gz.tbi  CMakeLists.txt  ann_data.hpp  bcf_data.hpp  bcf_input_test.cpp  bcf_output_test.cpp  fasta_input_test.cpp  fasta_output_test.cpp  fastq_data.hpp  fastq_input_test.cpp  fastq_output_test.cpp  sam_input_test.cpp  sam_input_test_template.hpp  seq_output_detail.hpp  vcf_data.hpp  vcf_input_test.cpp  vcf_output_test.cpp
test/unit/map_io/: CMakeLists.txt  data.hpp  header_test.cpp  map_io_reader_test.cpp
test/unit/misc/: CMakeLists.txt  char_predicate_test.cpp
test/unit/plain_io/: CMakeLists.txt  plain_io_reader_test.cpp  plain_io_writer_test.cpp
test/unit/seq/: CMakeLists.txt  seq_reader_test.cpp  seq_record_test.cpp  seq_writer_test.cpp
test/unit/seq_io/: CMakeLists.txt  data.hpp  seq_io_reader_test.cpp
test/unit/stream/: CMakeLists.txt  bgzf_istream_test.cpp  bgzf_ostream_test.cpp  bz2_istream_test.cpp  bz2_ostream_test.cpp  data.hpp  gz_istream_test.cpp  gz_ostream_test.cpp  istream_test_template.hpp  ostream_test_template.hpp  transparent_istream_test.cpp  transparent_ostream_test.cpp
test/unit/txt/: CMakeLists.txt  txt_reader_test.cpp  txt_writer_test.cpp
test/unit/var/: CMakeLists.txt  var_header_test.cpp  var_reader_test.cpp  var_record_test.cpp  var_writer_test.cpp  var_writer_test_issue53.cpp
test/unit/var_io/: CMakeLists.txt  var_io_header_test.cpp  var_io_reader_test.cpp  var_io_record_test.cpp  var_io_writer_test.cpp  var_io_writer_test_issue53.cpp
(+32 files in other folders)
